--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Image Measuring</title>
+    <title>Vascular Blood Flow</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="resources/svgStyles.css" rel="stylesheet"/>
-
-    <script src="resources/vesselConstrict.js" type="text/javascript"></script>
+    <link href="resources/BloodVesselFlow.css" rel="stylesheet"/>
+    <script src="resources/BloodVesseLFlow.js" type="text/javascript"></script>
 
   </head>
   <body class="svganim vesselConstrict">
     <div class="ui-nav">
-        <button type="button" class="btn btn-primary" onclick="SetFlow()">Normal Flow</button>
-        <button type="button" class="btn btn-primary" onclick="SetFlow(2)">Increase Flow</button>
+        <button type="button" class="btn btn-primary" onclick="SetFlow(8); SetSize(1.1)">Dilated</button>
+        <button type="button" class="btn btn-primary" onclick="SetFlow(4); SetSize(0.8)">Normal</button>
+        <button type="button" class="btn btn-primary" onclick="SetFlow(2); SetSize(0.5)">Constricted</button>
     </div>
     
     <svg version="1.1" id="Normal" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
