--- a/resources/index.html
+++ b/resources/index.html
@@ -7,8 +7,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="resources/BloodVesselFlow.css" rel="stylesheet"/>
-    <script src="resources/BloodVesseLFlow.js" type="text/javascript"></script>
+    <link href="https://cdn.jsdelivr.net/gh/vie74050/BloodVesselFlow/resources/BloodVesselFlow.css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/gh/vie74050/BloodVesselFlow/resources/BloodVesselFlow.js" type="text/javascript"></script>
 
   </head>
   <body class="svganim vesselConstrict">
