--- a/resources/bloodVesselFlowAnim.html
+++ b/resources/bloodVesselFlowAnim.html
@@ -7,8 +7,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="https://cdn.jsdelivr.net/gh/vie74050/BloodVesselFlow@73885e4f9a6ec297556bfae5a9dba93afeceb947/resources/BloodVesselFlow.min.css" rel="stylesheet"/>
-    <script src="https://cdn.jsdelivr.net/gh/vie74050/BloodVesselFlow@73885e4f9a6ec297556bfae5a9dba93afeceb947/resources/BloodVesselFlow.min.js" type="text/javascript"></script>
+    <link href="https://cdn.jsdelivr.net/gh/vie74050/BloodVesselFlow/resources/BloodVesselFlow.min.css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/gh/vie74050/BloodVesselFlow/resources/BloodVesselFlow.min.js" type="text/javascript"></script>
 
   </head>
   <body class="svganim vesselConstrict">
